--- a/index.html
+++ b/index.html
@@ -2,8 +2,29 @@
 
 <body>
 
-
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
+    <script src="./py.js"></script>
     <script>
+        pyodide = null
+
+        async function main() {
+            pyodide = await loadPyodide();
+            await pyodide.loadPackage("pillow")
+            // Pyodide is now ready to use...
+            console.log(pyodide.runPython(`
+                import sys
+                sys.version
+            `));
+            is_load = true
+        };
+        main();
+
+
+        function run_py() {
+            let res = pyodide.runPython(script)
+            alert(res)
+        }
+
         // create canvas element and append it to document body
         var canvas = document.createElement('canvas');
         document.body.appendChild(canvas);
@@ -30,29 +51,19 @@
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
             } else if (event.keyCode === 13 || event.keyCode === 67) {
                 // confirm
-                var image = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");  // here is the most important part because if you dont replace you will get a DOM 18 exception.
+                if (!is_load) {
+                    alert("Loading")
+                    return
+                }
 
+                arg = canvas.toDataURL("image/png").toString()
+                run_py()
+            } else if (event.keyCode == 68) {
+                var image = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");  // here is the most important part because if you dont replace you will get a DOM 18 exception.
 
                 window.location.href = image; // it will save locally
             }
         });
-
-        function fileUpload(canvas) {
-            let data = new FormData();
-            canvas.toBlob(function (blob) {
-                data.append('data', blob);
-
-                axios
-                    .post(`https://api.graph.cool/file/v1/MY-PROJECTID`, data, {
-                        headers: {
-                            'Content-Type': 'multipart/form-data',
-                        },
-                    })
-                    .then(res => {
-                        console.log(res)
-                    });
-            });
-        }
 
         // new position from mouse event
         function setPosition(e) {
@@ -72,7 +83,7 @@
 
             ctx.beginPath(); // begin
 
-            ctx.lineWidth = 5;
+            ctx.lineWidth = 30;
             ctx.lineCap = 'round';
             ctx.strokeStyle = '#000000';
 
